Wipe out a few deprecation warnings while we are in here.